update all architecture
