# app/controllers/api/patients/doctors_controller.rb
@@ -3,29 +3,25 @@ class Api::Patients::DoctorsController < ApplicationController
 	before_action :authenticate_user
 
 	def index
-		doctors = Doctor.getInfos
-		render json: { doctors: doctors }, status: :ok
+		user_attrs = [:email, :first_name, :last_name]
+		doctors = Doctor.all
+		render json: doctors.to_json({
+			only: [:id],
+			include: {
+				user: { only: user_attrs }
+			}
+		}), status: :ok
 	end
 
 	def my_doctors
-		doctors = current_patient.getDoctorsInfo
-		render json: { doctors: doctors }, status: :ok
-	end
-
-	def add_doctor
-		if current_patient.addDoctor(params[:doctor_id], params[:module_id])
-			render json: {}, status: :ok
-		else
-			render json: { :errors => current_patient.errors.full_messages }, status: :unprocessable_entity
-		end
-	end
-
-	def remove_doctor
-		if current_patient.removeDoctor(params[:doctor_id], params[:module_id])
-			render json: {}, status: :ok
-		else
-			render json: { :errors => current_patient.errors.full_messages }, status: :unprocessable_entity
-		end
+		user_attrs = [:email, :first_name, :last_name]
+		doctors = current_patient.doctors
+		render json: doctors.to_json({
+			only: [:id],
+			include: {
+				user: { only: user_attrs }
+			}
+		}), status: :ok
 	end
 
 private
