# app/controllers/api/patients/notes_controller.rb
@@ -2,14 +2,6 @@ class Api::Patients::NotesController < ApplicationController
 
 	before_action :authenticate_user
 
-	def create
-		if Note.addNote(params[:module_id], params[:data], current_patient)
-			render json: { }, status: :ok
-		else
-			render json: { errors: "You do not have this module" }, status: :unprocessable_entity
-		end
-	end
-
 	def destroy
 		note = current_patient.notes.find_by(id: params[:id])
 		if note && note.destroy
@@ -22,7 +14,7 @@ class Api::Patients::NotesController < ApplicationController
 	def update
 		note = current_patient.notes.find_by(id: params[:id])
 		if note && note.update({data: params[:data].to_json})
-			render json: { message: "Note successfully created" }, status: :ok
+			render json: { message: "Note successfully updated" }, status: :ok
 		else
 			render json: { errors: "Note not found" }, status: :not_found
 		end
@@ -36,7 +28,7 @@ class Api::Patients::NotesController < ApplicationController
 private
 
 	def permited_params
-		params.require(:note).permite(:module_id, :data)
+		params.require(:note).permite(:data)
 	end
 
 end
